--- a/scripts/common/deploy-sample-manifests/task.yml
+++ b/scripts/common/deploy-sample-manifests/task.yml
@@ -8,9 +8,8 @@ image_resource:
 
 inputs:
   - name: ci
-  - name: bosh-deployment
   - name: release
-  - name: bosh-lite-stemcell
+  - name: gcp-stemcell
 
 params:
   BBL_GCP_SERVICE_ACCOUNT_KEY:
