increase timeout for openstack bbl up
Co-authored-by: Josh Zarrabi <jzarrabi@pivotal.io>

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -810,6 +810,7 @@ jobs:
       BBL_TEST_ENV_ID_PREFIX: bbl-ci
       BBL_TEST_PACKAGES: bbl
       RUN_TEST: bbl-up
+      BBL_UP_TIMEOUT: 80m
 
 - name: gcp-acceptance-tests
   serial: true
@@ -1101,6 +1102,7 @@ jobs:
       BBL_TEST_ENV_ID_PREFIX: bump-deployments
       BBL_TEST_PACKAGES: bbl
       RUN_TEST: bbl-up
+      BBL_UP_TIMEOUT: 80m
 
 - name: gcp-acceptance-tests-bump-deployments
   serial: true
