use old bbl and cf-d to test consul patches
[#158741402]

Signed-off-by: Nick Mahoney <nmahoney@pivotal.io>

--- a/pipelines/consul.yml
+++ b/pipelines/consul.yml
@@ -23,18 +23,17 @@ resources:
     uri: git@github.com:cloudfoundry/infrastructure-ci-bbl-states.git
     private_key: {{cf_infra_bot_user_github_private_key}}
 
-- name: cf-deployment-concourse-tasks-bbl-dev
+- name: cf-deployment-concourse-tasks-docker-image
   type: docker-image
   source:
-    repository: cfinfrastructure/cf-deployment-concourse-tasks-bbl-dev
-    username: {{docker-username}}
-    password: {{docker-password}}
-    email: {{docker-email}}
+    tag: v5.14.0
+    repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
 
 - name: cf-deployment
   type: git
   source:
     branch: master
+    tag_filter: v2.9.*
     uri: https://github.com/cloudfoundry/cf-deployment.git
 
 - name: bosh-deployment
@@ -75,6 +74,7 @@ resources:
   type: git
   source:
     branch: master
+    tag_filter: v6.14
     uri: https://github.com/cloudfoundry/cf-deployment-concourse-tasks.git
 
 - name: oss-s3-buckets-stack
@@ -126,12 +126,11 @@ jobs:
 
 - name: deploy-cf
   serial: true
-  build_logs_to_retain: 100
   plan:
   - aggregate:
     - get: cf-deployment-concourse-tasks
     - get: infrastructure-ci-bbl-states
-    - get: cf-deployment-concourse-tasks-bbl-dev
+    - get: cf-deployment-concourse-tasks-docker-image
     - get: ci
       resource: infrastructure-ci
     - get: cf-deployment
@@ -143,7 +142,7 @@ jobs:
       resource: infrastructure-ci-bbl-states
   - task: bbl-leftovers
     file: ci/scripts/bosh-bootloader/leftovers/task.yml
-    image: cf-deployment-concourse-tasks-bbl-dev
+    image: cf-deployment-concourse-tasks-docker-image
     params:
       BBL_IAAS: gcp
       BBL_GCP_SERVICE_ACCOUNT_KEY: {{cf_infra_gcp_service_account_key}}
@@ -152,7 +151,7 @@ jobs:
       BBL_STATE_DIR: cf-with-consul
   - task: bbl-up
     file: cf-deployment-concourse-tasks/bbl-up/task.yml
-    image: cf-deployment-concourse-tasks-bbl-dev
+    image: cf-deployment-concourse-tasks-docker-image
     params:
       BBL_IAAS: gcp
       BBL_GCP_SERVICE_ACCOUNT_KEY: {{cf_infra_gcp_service_account_key}}
@@ -170,7 +169,7 @@ jobs:
     on_failure:
       task: bbl-up-destroy-infrastructure
       file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
-      image: cf-deployment-concourse-tasks-bbl-dev
+      image: cf-deployment-concourse-tasks-docker-image
       params:
         BBL_STATE_DIR: cf-with-consul
         BBL_GCP_SERVICE_ACCOUNT_KEY: {{cf_infra_gcp_service_account_key}}
@@ -183,7 +182,6 @@ jobs:
           repository: updated-bbl-state
   - task: add-to-gcp-dns
     file: ci/scripts/common/manage-gcp-dns/task.yml
-    image: cf-deployment-concourse-tasks-bbl-dev
     params:
       BBL_STATE_DIR: cf-with-consul
       GCP_DNS_PROJECT_ID: {{cf_infra_gcp_project_id}}
@@ -197,7 +195,7 @@ jobs:
     on_failure:
       task: destroy-infrastructure
       file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
-      image: cf-deployment-concourse-tasks-bbl-dev
+      image: cf-deployment-concourse-tasks-docker-image
       input_mapping:
         bbl-state: updated-bbl-state
       params:
@@ -210,7 +208,7 @@ jobs:
           repository: updated-bbl-state
   - task: upload-stemcell
     file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
-    image: cf-deployment-concourse-tasks-bbl-dev
+    image: cf-deployment-concourse-tasks-docker-image
     input_mapping:
       bbl-state: updated-bbl-state
     params:
@@ -221,7 +219,6 @@ jobs:
       do:
       - task: remove-from-gcp-dns
         file: ci/scripts/common/manage-gcp-dns/task.yml
-        image: cf-deployment-concourse-tasks-bbl-dev
         params:
           BBL_STATE_DIR: cf-with-consul
           GCP_DNS_PROJECT_ID: {{cf_infra_gcp_project_id}}
@@ -234,7 +231,7 @@ jobs:
           bbl-states-repo: updated-bbl-state
       - task: destroy-infrastructure
         file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
-        image: cf-deployment-concourse-tasks-bbl-dev
+        image: cf-deployment-concourse-tasks-docker-image
         input_mapping:
           bbl-state: updated-bbl-state
         params:
@@ -247,7 +244,7 @@ jobs:
             repository: updated-bbl-state
   - task: deploy-cf
     file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
-    image: cf-deployment-concourse-tasks-bbl-dev
+    image: cf-deployment-concourse-tasks-docker-image
     input_mapping:
       bbl-state: updated-bbl-state
     params:
@@ -255,12 +252,12 @@ jobs:
       BBL_GCP_SERVICE_ACCOUNT_KEY: {{cf_infra_gcp_service_account_key}}
       SYSTEM_DOMAIN: cf-with-consul.infrastructure.cf-app.com
       VARS_STORE_FILE: cf-with-consul/deployment-vars.yml
-      OPS_FILES: "operations/use-compiled-releases.yml operations/scale-to-one-az.yml operations/workaround/use-4-azs-for-router.yml"
+      OPS_FILES: "operations/use-compiled-releases.yml operations/scale-to-one-az.yml operations/experimental/fast-deploy-with-downtime-and-danger.yml"
     on_failure:
       do:
       - task: remove-from-gcp-dns
         file: ci/scripts/common/manage-gcp-dns/task.yml
-        image: cf-deployment-concourse-tasks-bbl-dev
+        image: cf-deployment-concourse-tasks-docker-image
         params:
           BBL_STATE_DIR: cf-with-consul
           GCP_DNS_PROJECT_ID: {{cf_infra_gcp_project_id}}
@@ -273,7 +270,7 @@ jobs:
           bbl-states-repo: updated-bbl-state
       - task: delete-cf-deployment
         file: cf-deployment-concourse-tasks/bosh-delete-deployment/task.yml
-        image: cf-deployment-concourse-tasks-bbl-dev
+        image: cf-deployment-concourse-tasks-docker-image
         input_mapping:
           bbl-state: updated-bbl-state
         params:
@@ -281,7 +278,7 @@ jobs:
           BBL_GCP_SERVICE_ACCOUNT_KEY: {{cf_infra_gcp_service_account_key}}
       - task: bosh-cleanup
         file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
-        image: cf-deployment-concourse-tasks-bbl-dev
+        image: cf-deployment-concourse-tasks-docker-image
         input_mapping:
           bbl-state: updated-bbl-state
         params:
@@ -290,7 +287,7 @@ jobs:
           BBL_GCP_SERVICE_ACCOUNT_KEY: {{cf_infra_gcp_service_account_key}}
       - task: destroy-infrastructure
         file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
-        image: cf-deployment-concourse-tasks-bbl-dev
+        image: cf-deployment-concourse-tasks-docker-image
         input_mapping:
           bbl-state: updated-bbl-state
         params:
@@ -302,7 +299,7 @@ jobs:
             rebase: true
             repository: updated-bbl-state
   - task: smoke-tests
-    image: cf-deployment-concourse-tasks-bbl-dev
+    image: cf-deployment-concourse-tasks-docker-image
     input_mapping:
       bbl-state: updated-bbl-state
     config:
@@ -318,7 +315,6 @@ jobs:
       do:
       - task: remove-from-gcp-dns
         file: ci/scripts/common/manage-gcp-dns/task.yml
-        image: cf-deployment-concourse-tasks-bbl-dev
         params:
           BBL_STATE_DIR: cf-with-consul
           GCP_DNS_PROJECT_ID: {{cf_infra_gcp_project_id}}
@@ -331,7 +327,7 @@ jobs:
           bbl-states-repo: updated-bbl-state
       - task: delete-cf-deployment
         file: cf-deployment-concourse-tasks/bosh-delete-deployment/task.yml
-        image: cf-deployment-concourse-tasks-bbl-dev
+        image: cf-deployment-concourse-tasks-docker-image
         input_mapping:
           bbl-state: updated-bbl-state
         params:
@@ -339,7 +335,7 @@ jobs:
           BBL_GCP_SERVICE_ACCOUNT_KEY: {{cf_infra_gcp_service_account_key}}
       - task: bosh-cleanup
         file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
-        image: cf-deployment-concourse-tasks-bbl-dev
+        image: cf-deployment-concourse-tasks-docker-image
         input_mapping:
           bbl-state: updated-bbl-state
         params:
@@ -348,7 +344,7 @@ jobs:
           BBL_GCP_SERVICE_ACCOUNT_KEY: {{cf_infra_gcp_service_account_key}}
       - task: destroy-infrastructure
         file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
-        image: cf-deployment-concourse-tasks-bbl-dev
+        image: cf-deployment-concourse-tasks-docker-image
         input_mapping:
           bbl-state: updated-bbl-state
         params:
@@ -359,19 +355,6 @@ jobs:
           params:
             rebase: true
             repository: updated-bbl-state
-
-# - name: run-cats
-#   serial: true
-#   plan:
-#   - aggregate:
-#     - get: repo
-#       resource: consul-release-develop
-#       passed: [deploy-sample-manifest]
-#       trigger: true
-#     - get: cf-deployment-concourse-tasks
-#   - task: run-cats
-#     file: cf-deployment-concourse-tasks/run-cats/task.yml
-#     params:
 
 - name: releasable
   serial: true
