--- a/pipelines/terraforming.yml
+++ b/pipelines/terraforming.yml
@@ -168,11 +168,16 @@ jobs:
     params:
       OM_USERNAME: {{om_username}}
       OM_PASSWORD: {{om_password}}
-  - task: upload-configure-stage
+    input_mapping:
+      env-state: env-state-gcp
+  - task: upload-configure-stage-srt
     file: ci/scripts/terraforming/gcp/upload-configure-stage/task.yml
     params:
       OM_USERNAME: {{om_username}}
       OM_PASSWORD: {{om_password}}
+      PRODUCT_FILE_NAME: srt
+      PRODUCT_NAME: cf
+      PRODUCT_CONFIG_TEMPLATE: srt-config-template.yml
     input_mapping:
       env-state: env-state-gcp
 
