add product-config as input to upload-configure-stage
[#160073203]

Signed-off-by: Chris Dutra <cdutra@pivotal.io>

--- a/scripts/terraforming/gcp/upload-configure-stage/task.yml
+++ b/scripts/terraforming/gcp/upload-configure-stage/task.yml
@@ -11,6 +11,7 @@ inputs:
 - name: ci
 - name: stemcell
 - name: product
+- name: product-config
 
 run:
   path: ci/scripts/terraforming/gcp/upload-configure-stage/task
