--- a/pipelines/terraforming.yml
+++ b/pipelines/terraforming.yml
@@ -180,6 +180,7 @@ jobs:
     input_mapping:
       env-state: env-state-gcp
       product: srt
+      product-config: ci
 
 - name: deploy-gcp
   serial: true
