fix product config stuff
[#160073203]

Signed-off-by: Josh Zarrabi <jzarrabi@pivotal.io>

--- a/scripts/terraforming/gcp/upload-configure-stage/task.yml
+++ b/scripts/terraforming/gcp/upload-configure-stage/task.yml
@@ -11,7 +11,7 @@ inputs:
 - name: ci
 - name: stemcell
 - name: product
-- name: product-config
+- name: product-config-repo
 
 run:
   path: ci/scripts/terraforming/gcp/upload-configure-stage/task
