--- a/pipelines/terraforming.yml
+++ b/pipelines/terraforming.yml
@@ -176,11 +176,11 @@ jobs:
       OM_USERNAME: {{om_username}}
       OM_PASSWORD: {{om_password}}
       PRODUCT_NAME: cf
-      PRODUCT_CONFIG_TEMPLATE: ci/scripts/terraforming/gcp/upload-configure-stage/srt-config-template.yml
+      PRODUCT_CONFIG_TEMPLATE: scripts/terraforming/gcp/upload-configure-stage/srt-config-template.yml
     input_mapping:
       env-state: env-state-gcp
       product: srt
-      product-config: ci
+      product-config-repo: ci
 
 - name: deploy-gcp
   serial: true
