--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -3201,7 +3201,7 @@ jobs:
       GCP_DNS_SERVICE_ACCOUNT_EMAIL: {{cf_infra_gcp_service_account_email}}
       GCP_DNS_SERVICE_ACCOUNT_KEY: {{cf_infra_gcp_service_account_key}}
       GCP_DNS_ZONE_NAME: infrastructure
-      GCP_DNS_RECORD_SET_NAME: bbl-downstream-bump-deployments.infrastructure.cf-app.com
+      GCP_DNS_RECORD_SET_NAME: bump-deployments-cf.infrastructure.cf-app.com
       ACTION: add
     input_mapping:
       bbl-states-repo: updated-bbl-state
@@ -3239,7 +3239,7 @@ jobs:
           GCP_DNS_SERVICE_ACCOUNT_EMAIL: {{cf_infra_gcp_service_account_email}}
           GCP_DNS_SERVICE_ACCOUNT_KEY: {{cf_infra_gcp_service_account_key}}
           GCP_DNS_ZONE_NAME: infrastructure
-          GCP_DNS_RECORD_SET_NAME: bbl-downstream.infrastructure.cf-app.com
+          GCP_DNS_RECORD_SET_NAME: bump-deployments-cf.infrastructure.cf-app.com
           ACTION: remove
         input_mapping:
           bbl-states-repo: updated-bbl-state
@@ -3264,7 +3264,7 @@ jobs:
     params:
       BBL_STATE_DIR: bump-deployments/bbl-gcp-cf
       BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-      SYSTEM_DOMAIN: bbl-downstream-bump-deployments.infrastructure.cf-app.com
+      SYSTEM_DOMAIN: bump-deployments-cf.infrastructure.cf-app.com
       VARS_STORE_FILE: bump-deployments/bbl-gcp-cf/deployment-vars.yml
       OPS_FILES: "operations/use-compiled-releases.yml operations/scale-to-one-az.yml operations/workaround/use-4-azs-for-router.yml"
     on_failure:
@@ -3278,7 +3278,7 @@ jobs:
           GCP_DNS_SERVICE_ACCOUNT_EMAIL: {{cf_infra_gcp_service_account_email}}
           GCP_DNS_SERVICE_ACCOUNT_KEY: {{cf_infra_gcp_service_account_key}}
           GCP_DNS_ZONE_NAME: infrastructure
-          GCP_DNS_RECORD_SET_NAME: bbl-downstream-bump-deployments.infrastructure.cf-app.com
+          GCP_DNS_RECORD_SET_NAME: bump-deployments-cf.infrastructure.cf-app.com
           ACTION: remove
         input_mapping:
           bbl-states-repo: updated-bbl-state
@@ -3336,7 +3336,7 @@ jobs:
           GCP_DNS_SERVICE_ACCOUNT_EMAIL: {{cf_infra_gcp_service_account_email}}
           GCP_DNS_SERVICE_ACCOUNT_KEY: {{cf_infra_gcp_service_account_key}}
           GCP_DNS_ZONE_NAME: infrastructure
-          GCP_DNS_RECORD_SET_NAME: bbl-downstream-bump-deployments.infrastructure.cf-app.com
+          GCP_DNS_RECORD_SET_NAME: bump-deployments-cf.infrastructure.cf-app.com
           ACTION: remove
         input_mapping:
           bbl-states-repo: updated-bbl-state
