Skip worker drain scripts
- skipping drain scripts for worker circumvents Concourse bug
  https://github.com/concourse/concourse/issues/2523

[#158436120](https://www.pivotaltracker.com/story/show/158436120)

--- a/pipelines/concourse.yml
+++ b/pipelines/concourse.yml
@@ -93,6 +93,8 @@ jobs:
         - concourse-deployment/cluster/operations/web-network-extension.yml
         - concourse-deployment/cluster/operations/worker-ephemeral-disk.yml
         - concourse-deployment/cluster/operations/scale.yml
+      skip_drain:
+        - worker
 
 - name: update-concourse-vsphere-worker
   interruptible: true
