Increase update timeout to allow credhub to start without failure
[#158436120](https://www.pivotaltracker.com/story/show/158436120)

Co-authored-by: Nick Mahoney <nmahoney@pivotal.io>

--- a/pipelines/concourse.yml
+++ b/pipelines/concourse.yml
@@ -98,6 +98,7 @@ jobs:
         - ci/operations/ci-uaa-clients.yml
         - concourse-deployment/cluster/operations/credhub.yml
         - ci/operations/ci-credhub.yml
+        - ci/operations/update.yml
       skip_drain:
         - worker
 
